--- a/base.css
+++ b/base.css
@@ -135,10 +135,20 @@ global-search-bar:not([hidden]) {
     border-radius: 3px !important;
 }
 input[type="search"] {
-    min-height: 27px !important;
-    border: 1px solid #B8B8B8 !important;
-    background: #ffffff !important;
-    box-shadow: inset 0 0 1px 0 rgba(0,0,0,0.3), 0 1px 0 0 rgba(255,255,255,0.5) !important;
+    min-height: 26px !important;
+    border: 1px solid #C8C8C8 !important;
+    background-color: #ffffff !important;
+    box-shadow: inset 0px 1px 1px 0px rgba(0,0,0,0.08), 0 1px 0 0 rgba(255,255,255,1) !important;
+}
+input[type="search"]:focus-visible {
+    outline-style: none !important;
+    outline-width: none !important;
+    outline-color: none !important;
+    outline-offset: none !important;
+    background-color: #ffffff !important;
+    border: 1px solid var(--selected-item-color) !important;
+    box-shadow: inset 0px 1px 1px 0px var(--accentcolor-percentage), 0 0 0 2px var(--accentcolor-percentage) !important;
+    filter: saturate(150%) !important;
 }
 form {
     min-height: 26px !important;
@@ -146,6 +156,11 @@ form {
 #spacesPinnedButton {
     margin: 8px 4px !important;
     padding: 6px !important;
+}
+#mail-menubar > menu[_moz-menuactive="true"]:not([disabled="true"]) {
+    background: #DDDDDD !important;
+    border-bottom: 3px solid #DDDDDD !important;
+    border-radius: 4px 4px 0px 0px !important;
 }
 menuseparator,
 toolbarseparator {
@@ -221,10 +236,11 @@ unified-toolbar {
     --tab-max-width: 225px !important;
 }
 #tabs-toolbar {
-    min-height: 35px !important;
-    max-height: 35px !important;
+    min-height: 36px !important;
+    max-height: 36px !important;
     box-shadow: none !important;
     border-bottom: none !important;
+    padding-bottom: 2px !important;
 }
 .tabmail-tab[selected="true"] {
     min-height: 34px !important;
@@ -239,7 +255,7 @@ unified-toolbar {
 .tab-background {
     border-top: 0 !important;
     border-radius: 3.5px !important;
-    margin: 2px 0px 2px 0px !important;
+    margin: 2px 2px 2px 2px !important;
 }
 .tab-line {
     display: none !important; /* strip of color at the top of tab */
@@ -249,12 +265,6 @@ unified-toolbar {
     margin-left: 6px !important;
     margin-right: 6px !important;
     text-align: center !important;
-}
-.tabmail-tab:before {
-    display: none !important; /* don't show border between tabs  */
-}
-.tabmail-tab:after {
-    display: none !important; /* don't show border between tabs  */
 }
 .tabmail-tab:not([visuallyselected="true"]) {
     min-height: 34px !important;
@@ -299,6 +309,24 @@ unified-toolbar {
     margin-inline-end: auto !important;
 }
 
+/* make tab separators: thanks to MrOtherGuy, source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/tab_separator_lines.css */
+.tabmail-tab {
+    border-inline-start: 1px solid transparent !important;
+    border-image: 0 1 linear-gradient(transparent 20%, color-mix(in srgb, #D9D9D9 100%, transparent) 20%, color-mix(in srgb, #D9D9D9 100%, transparent) 90%, transparent 90%) !important;
+}
+#tabs-toolbar .tabmail-tab:hover,
+#tabs-toolbar:not([movingtab]) .tabmail-tab:hover + .tabmail-tab:not([first-visible-unpinned-tab]),
+#tabs-toolbar .tabmail-tab:first-child,
+#tabs-toolbar .tabmail-tab[selected],
+#tabs-toolbar .tabmail-tab[multiselected],
+#tabs-toolbar #tabbrowser-arrowscrollbox[overflowing] > .tabmail-tab[first-visible-unpinned-tab],
+#tabs-toolbar:not([movingtab]) .tabmail-tab[multiselected] + .tabmail-tab,
+#tabs-toolbar:not([movingtab]) .tabmail-tab[selected] + .tabmail-tab {
+    border-inline-start: 1px solid transparent !important;
+    border-image: none !important;
+}
+
+
 /**** hamburger menu ****/
 
 #button-appmenu {
@@ -313,49 +341,52 @@ unified-toolbar {
     border-color: transparent !important;
     box-shadow: none !important;
 }
-:root[uidensity="compact"] #button-appmenu:is([open="true"], :active) {
-    min-width: 30px !important;
-    max-width: 30px !important;
-    min-height: 30px !important;
-    max-height: 30px !important;
-    clip-path: circle(50%) !important;
-    border-color: transparent !important;
-    box-shadow: none !important;
-    padding: 0px !important;
-    margin-inline: 7px 6px !important;
+#button-appmenu {
+    transition: none !important;
+    min-width: 32px !important;
+    min-height: 32px !important;
 }
-:root:not([uidensity="compact"]):not([uidensity="touch"]) #button-appmenu:is([open="true"], :active) {
-    min-width: 30px !important;
-    max-width: 30px !important;
-    min-height: 30px !important;
-    max-height: 30px !important;
+#button-appmenu:is([open="true"], :active) {
+    background-color: var(--accentcolor-percentage) !important;
     clip-path: circle(50%) !important;
     border-color: transparent !important;
     box-shadow: none !important;
-    padding: 0px !important;
-    margin-inline: 8px !important;
+    filter: saturate(150%) !important;
 }
-:root[uidensity="touch"] #button-appmenu:is([open="true"], :active) {
-    min-width: 30px !important;
-    max-width: 30px !important;
-    min-height: 30px !important;
-    max-height: 30px !important;
+
+/* make pinned spaces button also rounded + accent color, when sidebar is closed */
+#spacesPinnedButton {
+    transition: none !important;
+}
+#spacesPinnedButton:hover {
+    background-color: transparent !important;
+    border-color: transparent !important;
+    box-shadow: none !important;
+}
+#spacesPinnedButton:is([open="true"], :active) {
+    background-color: var(--accentcolor-percentage) !important;
     clip-path: circle(50%) !important;
     border-color: transparent !important;
     box-shadow: none !important;
-    padding: 0px !important;
-    margin-inline: 8px !important;
+    filter: saturate(150%) !important;
 }
 
 /**** colors ****/
 
+:root {
+    --selected-item-color: color-mix(in srgb, LinkText 70%, transparent) !important;
+    --accentcolor-percentage: color-mix(in srgb, LinkText 20%, transparent) !important;
+}
+
 /* system colors focus */
 
 #navigation-toolbox:-moz-window-inactive {
-    background: linear-gradient(to bottom, #EAEAEA, #E9E9E9) !important;
+    border-bottom: 1px solid rgba(0,0,0,0.10) !important;
+    background: #FAFAFA !important;
+    box-shadow: inset 0 0 0 1px rgba(255,255,255,1) !important;
 }
 #tabs-toolbar:-moz-window-inactive {
-    background: linear-gradient(180deg, rgba(236,236,236,1) 0%, rgba(250,250,250,1) 10%, rgba(250,250,250,1) 100%) !important;
+    background: none !important;
 }
 .tab-background[selected="true"]:-moz-window-inactive {
     background: #FAFAFA !important;
@@ -365,18 +396,18 @@ unified-toolbar {
     opacity: 0.5 !important;
 }
 #toolbar-menubar:-moz-window-inactive {
-    background-color: #EAEAEA !important;
+    background: none !important;
 }
 
 /** system colors **/
 
 #navigation-toolbox {
     border-bottom: 1px solid rgba(0,0,0,0.10) !important;
-    background: linear-gradient(to bottom, #E5E5E5, #DFDFDF) !important;
+    background: #FAFAFA !important;
+    box-shadow: inset 0 0 0 1px rgba(255,255,255,1) !important;
 }
 #tabs-toolbar {
-    background: linear-gradient(180deg, rgba(223,223,223,1) 0%, rgba(241,241,241,1) 10%, rgba(241,241,241,1) 98%, rgba(223,223,223,1) 100%) !important;
-    border-top: 1px solid rgba(0,0,0,0.17) !important;
+    background: none !important;
 }
 .tab-background[selected="true"] {
     background: #FFFFFF !important;
@@ -386,11 +417,8 @@ unified-toolbar {
 #tabs-toolbar tab .tab-close-button:active {
     background: rgba(51,51,51, 0.15) !important;
 }
-#button-appmenu:is([open="true"], :active) {
-    background: rgba(51,51,51, 0.15) !important;
-}
 #toolbar-menubar {
-    background-color: #E3E3E3 !important;
+    background: none !important;
 }
 #spacesPinnedButton:not([type="menu-button"], [disabled="true"]):is([open="true"], [checked="true"], :hover:active) {
     border-color: none !important;
@@ -408,11 +436,12 @@ unified-toolbar {
 
 @media (prefers-color-scheme: dark) {
 #navigation-toolbox:-moz-window-inactive {
-    background: linear-gradient(to bottom, #3B3B3B, #383838) !important;
+    background: #333333 !important;
+    border-bottom: 1px solid rgba(0,0,0,0.5) !important;
+    box-shadow: inset 0 0 0 1px rgba(255,255,255,0.05) !important;
 }
 #tabs-toolbar:-moz-window-inactive {
-	background: linear-gradient(180deg, rgb(48, 48, 48) 0%, rgb(51, 51, 51) 10%, rgb(51, 51, 51) 100%) !important;
-	border-top: 1px solid rgba(27, 27, 27, 1) !important;
+    background: none !important;
 }
 .tab-background[selected="true"]:-moz-window-inactive {
 	background: rgb(51,51,51) !important;
@@ -420,30 +449,39 @@ unified-toolbar {
     border-bottom: 1px solid rgba(255,255,255,0.05) !important;
 }
 #toolbar-menubar:-moz-window-inactive {
-    background-color: #383838 !important;
-}
-input[type="search"]:-moz-window-inactive {
-    min-height: 27px !important;
-    border: 1px solid #282828 !important;
-    background: linear-gradient(#3C3C3C, #404040) !important;
-    box-shadow: inset 0 0 1px 0 rgba(0,0,0,0.3), 0 1px 0 0 rgba(255,255,255,0.1) !important;
+    background-color: none !important;
 }
 
 /** system dark colors **/
 
+:root {
+    --selected-item-color: color-mix(in srgb, SelectedItem 95%, transparent 100%) !important;
+    --accentcolor-percentage: color-mix(in srgb, SelectedItem 95%, transparent 100%);
+}
+
 input[type="search"] {
-    min-height: 27px !important;
+    min-height: 26px !important;
     border: 1px solid #222222 !important;
-    background: linear-gradient(#3C3C3C, #404040) !important;
-    box-shadow: inset 0 0 1px 0 rgba(0,0,0,0.3), 0 1px 0 0 rgba(255,255,255,0.1) !important;
+    background: #3A3A3A !important;
+    box-shadow: inset 0px 1px 1px 0px rgba(0,0,0,0.08), 0 1px 0 0 rgba(255,255,255,0.05) !important;
+}
+input[type="search"]:focus-visible {
+    outline-style: none !important;
+    outline-width: none !important;
+    outline-color: none !important;
+    outline-offset: none !important;
+    background-color: #3A3A3A !important;
+    border: 1px solid #222222 !important;
+    box-shadow: inset 0px 1px 1px 0px rgba(0,0,0,0.08), 0 0 0 2px var(--accentcolor-percentage) !important;
+    filter: saturate(150%) !important;
 }
 #navigation-toolbox {
-    border-bottom: 1px solid rgba(27, 27, 27, 1) !important;
-    background: linear-gradient(to bottom, #343434, #2C2C2C) !important;
+    background: #333333 !important;
+    border-bottom: 1px solid rgba(0,0,0,0.5) !important;
+    box-shadow: inset 0 0 0 1px rgba(255,255,255,0.05) !important;
 }
 #tabs-toolbar {
-	background: linear-gradient(180deg, rgb(42, 42, 42) 0%, rgb(45, 45, 45) 10%, rgb(45, 45, 45) 100%) !important;
-	border-top: 1px solid rgba(27, 27, 27, 1) !important;
+	background: none !important;
 }
 .tab-background[selected="true"] {
     background: #3A3A3A !important;
@@ -456,8 +494,20 @@ input[type="search"] {
 .tab-close-icon[src="chrome://global/skin/icons/close.svg"] {
     content: url("data:image/svg+xml,%3Csvg height='16' width='16' version='1.1' id='svg1' xmlns='http://www.w3.org/2000/svg' xmlns:svg='http://www.w3.org/2000/svg'%3E%3Cdefs id='defs1' /%3E%3Cpath id='rect1' style='opacity:1;fill:%23ffffff;fill-opacity:1;stroke:none;stroke-width:1;stroke-opacity:0.498039;-inkscape-stroke:none' d='M 0.78168445 6.4081552 C 0.64612209 6.2725928 0.45772309 6.1885654 0.2499733 6.1885654 L -0.2499733 6.1885654 C -0.66547288 6.1885654 -0.99989318 6.5229857 -0.99989318 6.9384853 L -0.99989318 10.313815 L -4.3752232 10.313815 C -4.7907228 10.313815 -5.1251431 10.648236 -5.1251431 11.063735 L -5.1251431 11.563682 C -5.1251431 11.979181 -4.7907228 12.313602 -4.3752232 12.313602 L -0.99989318 12.313602 L -0.99989318 15.688932 C -0.99989318 16.104431 -0.66547288 16.438852 -0.2499733 16.438852 L 0.2499733 16.438852 C 0.66547288 16.438852 0.99989318 16.104431 0.99989318 15.688932 L 0.99989318 12.313602 L 4.3752232 12.313602 C 4.7907228 12.313602 5.1251431 11.979181 5.1251431 11.563682 L 5.1251431 11.063735 C 5.1251431 10.648236 4.7907228 10.313815 4.3752232 10.313815 L 0.99989318 10.313815 L 0.99989318 6.9384853 C 0.99989318 6.7307355 0.91724681 6.5437176 0.78168445 6.4081552 z ' transform='rotate(-45)' /%3E%3C/svg%3E") !important;
 }
-#button-appmenu:is([open="true"], :active) {
-    background: rgba(255,255,255, 0.2) !important;
+.tabmail-tab {
+    border-inline-start: 1px solid transparent !important;
+    border-image: 0 1 linear-gradient(transparent 20%, color-mix(in srgb, rgba(0,0,0,0.7), transparent) 20%, color-mix(in srgb, rgba(0,0,0,0.7), transparent) 90%, transparent 90%) !important;
+}
+#tabs-toolbar .tabmail-tab:hover,
+#tabs-toolbar:not([movingtab]) .tabmail-tab:hover + .tabmail-tab:not([first-visible-unpinned-tab]),
+#tabs-toolbar .tabmail-tab:first-child,
+#tabs-toolbar .tabmail-tab[selected],
+#tabs-toolbar .tabmail-tab[multiselected],
+#tabs-toolbar #tabbrowser-arrowscrollbox[overflowing] > .tabmail-tab[first-visible-unpinned-tab],
+#tabs-toolbar:not([movingtab]) .tabmail-tab[multiselected] + .tabmail-tab,
+#tabs-toolbar:not([movingtab]) .tabmail-tab[selected] + .tabmail-tab {
+    border-inline-start: 1px solid transparent !important;
+    border-image: none !important;
 }
 menuseparator,
 toolbarseparator {
@@ -470,7 +520,7 @@ toolbarseparator {
     background-repeat: repeat !important;
 }
 #toolbar-menubar {
-    background-color: #2F2F2F !important;
+    background-color: none !important;
 }
 :root {
     --layout-border-1: rgba(0,0,0,0.80) !important;
